# PLEXI

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEV_LOG.md  PRD-future.md  PRD-mvp.md  PROGRESS_REPORT.md  README.md  RUST_REBUILD_ANALYSIS.md  SESSION_MANAGER_DESIGN.md  SHIPPING.md  TAURI_MIGRATION.md  TAURI_NEXT_STEPS.md  electrobun.config.ts  install.sh  justfile  package-lock.json  package.json  playwright.config.ts  plexi.config.example.json  skills-lock.json  tasks.md  tsconfig.json  wdio.conf.ts
assets/: app-icon.icns  test.icns
docs/: AGENTS.md  architecture-audit.md  mvp-interaction-spec.md
docs/future-enhancements/: browser-pane-and-profiles.md  direct-pty-terminal-refactor.md  excalidraw-pane.md  live-edge-preview-terminals.md  spatial-group-splits-implementation-plan.md  workflow-perfection-roadmap.md
plexi-egui/: Cargo.toml
plexi-egui/plexi-mockup/: Cargo.toml
plexi-egui/plexi-mockup/src/: main.rs  theme.rs
plexi-egui/src/: app.rs  keys.rs  macos_menu.rs  main.rs  pane.rs  shell.rs  theme.rs  tiling.rs  workspace.rs
poc/egui-terminal/: Cargo.toml
scripts/: copy-ghostty-vendor.js  dev-clean.ts
src/: app.rs  fresh.html  keys.rs  macos_menu.rs  main.rs  pane.rs  theme.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  pty.rs  session.rs  shell_integration.rs
src-tauri/tests/: integration_test.rs
src/bun/: application-menu.ts  index.ts  launch-options.ts  main-window.ts  pty-loader.ts  session-manager.ts  session-rpc.ts  (+4 more)
test-results/: .last-run.json
(+41 files in other folders)
