[package]
name = "plexi-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.31"
eframe = { version = "0.31", features = ["default_fonts", "wgpu"] }
egui_tiles = { version = "0.12.0", features = ["serde"] }
egui_term = { path = "../deps/egui_term" }
dirs = "6"
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2.2", features = ["NSApplication", "NSMenu", "NSMenuItem", "NSRunningApplication"] }
objc2-foundation = { version = "0.2.2", features = ["NSThread"] }
