[package]
name = "plexi"
version = "0.1.0"
description = "Infinite 2D canvas terminal multiplexer"
authors = ["Ian Burke"]
license = "MIT"
repository = "https://github.com/ianjamesburke/plexi"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "plexi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tokio = { version = "1", features = ["full"] }
pty-process = { version = "0.5", features = ["async"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
libc = "0.2"
